# onedrive-sync

./: .envrc  Cargo.toml  flake.nix  shell.nix
src/: commit.rs  config.rs  logger.rs  main.rs  schema.sql  state.rs  tree.rs  util.rs
