[package]
name = "onedrive-sync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
dirs = "3.0.2"
env_logger = "0.8.3"
humantime = "2.1.0"
log = "0.4.14"
onedrive-api = "0.8.1"
open = "1.7.0"
reqwest = "0.11.3"
rusqlite = "0.25.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
strum = "0.20.0"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
